# sosS

./: LICENSE  README.md  pyproject.toml  setup.cfg
Sum_of_squares_squared.egg-info/: PKG-INFO  SOURCES.txt
soss/: do_the_thing.py
