[metadata]
name = Sum_of_squares_squared
author = BG
author_email = berei.gabor1@gmail.com
description = For a list of numbers calculates the sum of squares and squares it.
long_description = file : README.md
long_description_content_type = text/markdown
url = https://github.com/gaborberei/sosS
classifiers = 
    Programing Language :: Python :: 3
    Operating System :: OS independent

[options]
packages = find:
python_requires = >= 3.7
include_package_data = True
